--- a/style.css
+++ b/style.css
@@ -3,3 +3,12 @@
     margin: 20px;
     border: 1px solid lightgray;
 }
+
+.comment-username{
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.comment-content {
+    padding-bottom: 10px;
+}
