--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 
 #title {
     font-size: 25px;
-    font-weight: bold;
     font-family:fantasy;
     color:white;
     padding-top: 10px;
@@ -19,4 +18,14 @@
     margin-left: 10px;
     margin-right: 10px;
     padding-top: 10px;
+}
+
+.inputs {
+    border: lightgrey solid 2px;
+    margin: 10px;
+    padding: 5px;
+    font-family: fantasy;
+    font-size: small;
+    
+
 }
