--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 .div-title {
     height: 50px;
     background-color: lightpink;
-    /* margin: -5px; */
     border: 3px solid #fff;
-    /* padding: 20px; */
     display: flex;
 }
 
@@ -20,7 +18,7 @@
     padding-top: 10px;
 }
 
-.inputs {
+#input {
     border: lightgrey solid 2px;
     margin: 10px;
     padding: 5px;
@@ -28,4 +26,15 @@
     font-size: small;
     
 
+}
+
+.task {
+    font-family: fantasy;
+    display: flex;
+    padding: 8px;
+    
+}
+.task-text {
+    padding-left: 5px;
+    padding-right: 5px;
 }
